# todolist

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose-ci.yaml  docker-compose.yaml  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
.github/workflows/: action.yml
core/: admin.py
core/migrations/: 0001_initial.py
frontend/: Dockerfile
tests/: conftest.py
todolist/: requirements.txt  settings.py
todolist/bot/: admin.py  models.py  urls.py  views.py
todolist/bot/management/commands/: runbot.py
todolist/bot/migrations/: 0001_initial.py  0002_rename_tg_id_tguser_tg_user_id.py  0002_tguser_cat_choosen_tguser_is_creating.py  0002_tguser_verification_code.py
todolist/bot/tg/: client.py  dc.py
todolist/core/: serializers.py  urls.py  views.py
todolist/goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
todolist/goals/migrations/: 0001_initial.py  0002_goal.py  0003_alter_goal_status_goalcomment.py  0004_board_goalcategory_board_boardparticipant.py  0006_alter_goalcategory_board.py
todolist/tests/: conftest.py  factories.py
todolist/tests/boards/views/: test_create.py  test_retrieve_view.py
todolist/tests/core/: test_login.py
todolist/tests/core/views/: test_login.py  test_profile_view.py  test_signup.py  test_update_password.py
todolist/tests/goals/views/: test_list_view.py  test_retrieve_view.py
todolist/todolist/: settings.py  urls.py
