[tool.poetry]
name = "todolist"
version = "0.1.0"
description = ""
authors = ["rorymercury <12345hasek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
django-environ = "^0.9.0"
psycopg2-binary = "^2.9.5"
djangorestframework = "^3.14.0"
social-auth-app-django = "^5.0.0"
django-filter = "^22.1"
marshmallow = "^3.19.0"
marshmallow-dataclass = "^8.5.11"
requests = "^2.28.2"
pytest-django = "^4.5.2"
pytest-faker = "^2.0.0"
pytest-factoryboy = "^2.5.1"
drf-spectacular = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
